@@ -1,5 +1,7 @@
 * 2006-07-10 Jeremy Sanders <jeremy@jeremysanders.net>
   - Fix problems if plotter coords exceed ~32000
+  - Speed up loading if lots of widgets are added by avoiding constant
+    tree refreshing
 	
 * 2006-06-27 Jeremy Sanders <jeremy@jeremysanders.net>
   - Spaces are allowed in dataset expressions
